# python-neural-network

./: README.md  main.py  mnist.py  network.py  pyproject.toml  setup.cfg  setup.py  xor.py
Functions/: activationFunctions.py  lossFuntion.py
Layers/: FCLayer.py  activationLayer.py  baseLayer.py
src/pythonNeuralNetwork/: mnist.py  network.py  xor.py
src/pythonNeuralNetwork/Functions/: activationFunctions.py
src/python_neural_network_mrxflight.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
