[metadata]
name = python-neural-network-mrxflight
version = 0.0.1
author = mrxflight
description = basic neural network libary written in python. Created with tutorial from https://towardsdatascience.com/math-neural-network-from-scratch-in-python-d6da9f29ce65
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mrxflight/python-neural-network
project_urls =
    Bug Tracker = https://github.com/mrxflight/python-neural-network/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src